<resources>
    <!-- Application name -->
    <string name="app_name">Brightcove Sample App</string>

    <!-- A sample Brightcove Edge Account ID -->
    <string name="account">3636334163001</string>

    <!-- A sample Brightcove Edge Policy Key -->
    <string name="policy">BCpkADawqM1W-vUOMe6RSA3pA6Vw-VWUNn5rL0lzQabvrI63-VjS93gVUugDlmBpHIxP16X8TSe5LSKM415UHeMBmxl7pqcwVY_AZ4yKFwIpZPvXE34TpXEYYcmulxJQAOvHbv2dpfq-S_cm</string>

    <!-- A sample Brightcove Video ID -->
    <string name="videoId">3637773814001</string>
    <string name="policyDescription">Policy ID</string>
    <string name="videoIdDescription">Video ID</string>
    <string name="accountIdDescription">Account ID</string>

</resources>
